[gd_scene load_steps=10 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://drugList.tscn" type="PackedScene" id=3]
[ext_resource path="res://buySellDropPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://chooseBuySellPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://jetPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://msgPopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://choicePopup.tscn" type="PackedScene" id=8]
[ext_resource path="res://loansharkPopup.tscn" type="PackedScene" id=9]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 391.0
margin_top = 30.0
margin_right = 633.0
margin_bottom = 600.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="stats" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 242.0
margin_bottom = 86.0

[node name="list" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 106.0
margin_right = 242.0
margin_bottom = 216.0

[node name="jetButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 242.0
margin_bottom = 256.0
text = "Jet"

[node name="buySellDropPopup" parent="." instance=ExtResource( 4 )]
visible = false

[node name="chooseBuySellPopup" parent="." instance=ExtResource( 5 )]
visible = false

[node name="jetPopup" parent="." instance=ExtResource( 6 )]
visible = false

[node name="msgPopup" parent="." instance=ExtResource( 7 )]
visible = false

[node name="choicePopup" parent="." instance=ExtResource( 8 )]
visible = false

[node name="loansharkPopup" parent="." instance=ExtResource( 9 )]
[connection signal="drugButtonPressed" from="MarginContainer/VBoxContainer/list" to="." method="_on_list_drugButtonPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/jetButton" to="." method="_on_jetButton_pressed"]
[connection signal="buySellDropPressed" from="buySellDropPopup" to="." method="_on_buySellDropPopup_buySellDropPressed"]
[connection signal="buyPressed" from="chooseBuySellPopup" to="." method="_on_chooseBuySellPopup_buyPressed"]
[connection signal="sellPressed" from="chooseBuySellPopup" to="." method="_on_chooseBuySellPopup_sellPressed"]
[connection signal="placeButtonPressed" from="jetPopup" to="." method="_on_jetPopup_placeButtonPressed"]
[connection signal="okayPressed" from="msgPopup" to="." method="_on_msgPopup_okayPressed"]
[connection signal="noPressed" from="choicePopup" to="." method="_on_choicePopup_noPressed"]
[connection signal="yesPressed" from="choicePopup" to="." method="_on_choicePopup_yesPressed"]
[connection signal="loansharkClosed" from="loansharkPopup" to="." method="_on_loansharkPopup_loansharkClosed"]
